Bug 159486 - Infobars' close (X) buttons' invisible hitboxes too small and hard to click
Summary: Infobars' close (X) buttons' invisible hitboxes too small and hard to click
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All Linux (All)
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:24.8.0
Keywords: accessibility
Depends on:
Blocks: Infobar-UX
  Show dependency treegraph
 
Reported: 2024-01-31 20:04 UTC by Jeff Fortin Tam
Modified: 2024-03-06 10:59 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Annotated screenshot showing the X button's hitbox boundaries (in red) (9.21 KB, image/png)
2024-01-31 20:09 UTC, Jeff Fortin Tam
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeff Fortin Tam 2024-01-31 20:04:08 UTC
Description:
The "x" button in the blue infobars is very hard to successfully activate with the mouse, as it apparently uses the tightest possible hitbox around the x's letter shape, instead of a regularly-sized button's big square/rectangular hitbox.

Steps to Reproduce:
On the Wayland version of GNOME in Fedora 39 (happens with any previous version of GNOME and LibreOffice):

1. Open a read-only document
2. Try to close the infobar with the mouse

Actual Results:
Almost impossible to click the button in a way that activates it, unless you precisely click on the pixels composing the black X character, or "between the arches of the X".

Expected Results:
It should be easy to hit the X button with the mouse, with a big square hitbox, sized like one of the regular action buttons surrounding it. Ideally, there should also be a button prelight / shape appearing on hover.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.3 (X86_64) / LibreOffice Community
Build ID: da48488a73ddd66ea24cf16bbc4f7b9c08e9bea1
CPU threads: 8; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Flatpak
Calc: threaded
Comment 1 Jeff Fortin Tam 2024-01-31 20:09:57 UTC
Created attachment 192303 [details]
Annotated screenshot showing the X button's hitbox boundaries (in red)

This is way too small to hit accurately with a mouse, and there is no visible bounding hitbox. It's an accessibility & usability problem.
Comment 2 Buovjaga 2024-03-05 18:42:08 UTC
With KDE, a rectangle surrounds the X upon hover and a tooltip appears "Close infobar". Same on Windows. The hitbox is clearly larger than the X.

With gtk3, there is no rectangle, but the tooltip appears.

Didn't test on Wayland yet, but with X11 the X is twice as large as in your screenshot.

Arch Linux 64-bit, X11
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 020828abee9b96993434a1c85f8637e2bc00d88e
CPU threads: 8; OS: Linux 6.7; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 5 March 2024
Comment 3 Heiko Tietze 2024-03-06 09:34:35 UTC
White-space is your friend...
Comment 4 Commit Notification 2024-03-06 10:59:07 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/06d8c1e9d8ba1d04914d1c48c94732cdb5c68846

Resolves tdf#159486 - Larger hitbox for close button on infobar

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.