Resolves tdf#159486 - Larger hitbox for close button on infobar

Change-Id: I83582c0c1ec7dd5e8f82bdf327e68ce88122ad03
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164450
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>